// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SeuCheckbox.03 toggle the disabled prop by change prop 1`] = `
<label
  aria-controls="false"
  aria-disabled="false"
  class="seu-checkbox"
  role="checkbox"
>
  <input
    aria-hidden="false"
    class="seu-checkbox__original"
    type="checkbox"
    value=""
  />
   
  <span
    class="seu-checkbox__input"
  >
    <span
      class="seu-checkbox__inner"
    />
  </span>
   
  <span
    class="seu-checkbox__label"
  >
    label3
  </span>
</label>
`;

exports[`SeuCheckbox.03 toggle the disabled prop by change prop 2`] = `
<label
  aria-controls="false"
  aria-disabled="true"
  class="seu-checkbox is-disabled"
  role="checkbox"
>
  <input
    aria-hidden="false"
    class="seu-checkbox__original"
    disabled=""
    type="checkbox"
    value=""
  />
   
  <span
    class="seu-checkbox__input is-disabled"
  >
    <span
      class="seu-checkbox__inner"
    />
  </span>
   
  <span
    class="seu-checkbox__label"
  >
    label3
  </span>
</label>
`;

exports[`SeuCheckbox.03 toggle the disabled prop by change prop 3`] = `
<label
  aria-controls="false"
  aria-disabled="false"
  class="seu-checkbox"
  role="checkbox"
>
  <input
    aria-hidden="false"
    class="seu-checkbox__original"
    type="checkbox"
    value=""
  />
   
  <span
    class="seu-checkbox__input"
  >
    <span
      class="seu-checkbox__inner"
    />
  </span>
   
  <span
    class="seu-checkbox__label"
  >
    label3
  </span>
</label>
`;
